Add year to projects model, add camp2013 text

--- a/templates/views/camp2013.hbs
+++ b/templates/views/camp2013.hbs
@@ -1,2 +1,9 @@
+<div>
 <h1>Camp 2013</h1>
-<h2>Inspired by Zana Briski’s documentary Born into Brothels, Shiv and Hannah designed and executed a 3-weeks long interactive photography camp to bring kids from diverse backgrounds together in Ambala, India.</h2>
+<p>Clicking Together was conceptualized in 2013 by Hannah Yang, Shiv Tandan, and Charmaine Poh to begin the journey of broadening the perspectives of youth in Ambala, India. Supported by the Davis Projects for Peace Foundation, the project brought together 22 different youths from eight different schools in the city. These youth were selected through a vigorous application process, and varied greatly in background, but they had two things in common: they showed themselves to be bright and creative, and they displayed an interest in photography. </p>
+
+<p> Through photography, the students were taught to better understand their environment, and be better equipped to transcend these boundaries of difference. The camera was used as a tool to investigate their worlds as well as the worlds of others. They were made to work together to create stories, and were encouraged to look beyond their own worldview and question their beliefs and assumptions. </p>
+
+<p> Each student was paired with a buddy, whom they shared a camera with. They visited each other’s neighborhoods and were challenged to tell their buddies’ stories in five photos. They went on an overnight retreat in the Kasauli hills with students from outside Ambala. The photographs exhibited culminated in four key themes: the Kasauli retreat, Ambala’s market Sadar Bazaar, Beauty in their lives, and Someone they love.</p>
+</div>
+
