--- a/templates/views/camp2013.hbs
+++ b/templates/views/camp2013.hbs
@@ -7,4 +7,6 @@
 <p> Each student was paired with a buddy, whom they shared a camera with. They visited each other’s neighborhoods and were challenged to tell their buddies’ stories in five photos. They went on an overnight retreat in the Kasauli hills with students from outside Ambala. The photographs exhibited culminated in four key themes: the Kasauli retreat, Ambala’s market Sadar Bazaar, Beauty in their lives, and Someone they love.</p>
 </div>
 
-{{> projects_preview }}
+{{#each projects}}
+  {{> projects_preview }}
+{{/each}}
