--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -3,9 +3,11 @@
 <head>
     <meta charset="utf-8">
     <title>Clicking Together</title>
+    <link href="/styles/site.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 </head>
 <body>
+  <h1>Default</h1>
 
     {{{body}}}
 
