Update camp2016 and navigation bar

--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -7,9 +7,18 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 </head>
 <body>
-  <h1>Default</h1>
+  <nav role="navigation">
+    <h1><a href="/">Clicking Together</a></h1>
+    <ul>
+      <li><a href="/about">About</a></li>
+      <li><a href="/camp2013">Camp 2013</a></li>
+      <li><a href="/camp2016">Camp 2016</a></li>
+      <li><a href="/documentary">Documentary</a></li>
+      <li><a href="/resources">Resources</a></li>
+    </ul>
+  </nav>
 
-    {{{body}}}
+  {{{body}}}
 
 </body>
 </html>
