--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -5,3 +5,19 @@
 .max-height {
   max-height: 100%;
 }
+
+nav h1 {
+  display: inline;
+  width: 30%;
+}
+
+nav ul {
+  float: right;
+  width: 60%;
+  padding: 10px 0 0 0;
+}
+
+nav li {
+  display: inline;
+  padding: 10px;
+}
