--- a/templates/views/partials/projects_preview.hbs
+++ b/templates/views/partials/projects_preview.hbs
@@ -1,4 +1,4 @@
 <div>
-  <h1>{{title}}</h1>
-  <img src={{cover.link}} alt={{title}}>
+  <a href="/{{parent.camp}}/{{child.title}}"><h1>{{child.title}}</h1></a>
+  <img src={{child.cover.link}} alt={{child.title}}>
 </div>
