add template changes

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,6 +1,5 @@
 <div class="content">
-  <h1>Home</h1>
   <h2>Using photography to help young citizens transcend boundaries of difference and prejudice.</h2>
   <h3>We aim for our students to see their lives, their cities, and the different communities within their cities from broader perspectives.</h3>
-  <button class="btn btn-primary" type="submit">Button</button>
+  <a href="/about"><button class="btn btn-primary" type="submit">Read More</button></a>
 </div>
