--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -1,5 +1,64 @@
 <h1>About</h1>
 
-{{#each team}} 
-  {{> bio }}
-{{/each}}
+<section class="mission col-xs-12 col-sm-12 col-md-12">
+<h2>Our Mission</h2>
+  <p>We live in a world where communities hold prejudices against one another, shaped by the labels of class, caste, religion, gender, and ethnicity. These prejudices often lead to a lack of understanding, and ultimately, disunity. Is there a way to bridge these divides? What if we were able to create a safe space of understanding at a young age - would that change the way each citizen views the world?</p>
+
+  <p>Clicking Together uses photography to help young citizens transcend boundaries of difference and prejudice.</p>
+
+  <p>We accomplish this through photography camps for youths. We aim for our students to see their lives, their cities, and the different communities within their cities from broader perspectives.</p>
+</section>
+
+<section class="team col-xs-12 col-sm-12 col-md-12">
+  <h2>Our Team</h2>
+  {{#each team}} 
+    {{> bio }}
+  {{/each}}
+</section>
+
+<section class="press col-xs-12 col-sm-12 col-md-12">
+  <h2>Clicking Together in the Press</h2>
+  <ul>
+    <li>The Sunday Guardian</li>
+    <li>Ambala Kesari</li>
+  </ul>
+</section>
+
+<section class="press col-xs-12 col-sm-12 col-md-12">
+  <h2>Partners and Sponsors</h2>
+  
+  <div class="col-xs-12 col-sm-6 col-md-4">
+    <h3>Program Funders</h3>
+    <ul>
+      <li>Davis Projects for Peace</li>
+      <li>GetIT Comms</li>
+    </ul>
+  </div>
+
+  <div class="col-xs-12 col-sm-6 col-md-4">
+    <h3>Program Supporters</h3>
+    <ul>
+      <li>Rotary Club of Ambala</li>
+      <li>Phoenix Club of Ambala</li>
+      <li>SD College Ambala</li>
+      <li>The Tandan Family</li>
+      <li>Dr. Desh Bandhu</li>
+    </ul>
+  </div>
+
+  <div class="col-xs-12 col-sm-6 col-md-4">
+    <h3>Camera Sponsorships and Donations</h3>
+    <ul>
+      <li>Future Forward</li>
+      <li>Holman Gao</li>
+      <li>Matthias Ho</li>
+    </ul>
+  </div>
+
+  <div class="col-xs-12 col-sm-6 col-md-4">
+    <h3>Website</h3>
+    <ul>
+      <li>Melanie Gin</li>
+    </ul>  
+  </div>
+</section>
