--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -5,6 +5,7 @@
     <title>Clicking Together</title>
     <link href="/styles/site.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <script src="https://use.fontawesome.com/c22f2ecb64.js"></script>
 </head>
 <body>
   <nav role="navigation">
