--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -6,18 +6,6 @@
   max-height: 100%;
 }
 
-nav h1 {
-  display: inline;
-  width: 30%;
-}
-
-nav ul {
-  float: right;
-  width: 60%;
-  padding: 10px 0 0 0;
-}
-
 nav li {
-  display: inline;
-  padding: 10px;
+  list-style: none;
 }
