--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -8,7 +8,7 @@
     <script src="https://use.fontawesome.com/c22f2ecb64.js"></script>
 </head>
 <body>
-  <nav role="navigation">
+  <nav class="col-xs-12 col-sm-4 col-md-4" role="navigation">
     <h1><a href="/">Clicking Together</a></h1>
     <ul>
       <li><a href="/about">About</a></li>
@@ -19,7 +19,9 @@
     </ul>
   </nav>
 
-  {{{body}}}
+  <div class="col-xs-12 col-sm-8 col-md-8">
+    {{{body}}}
+  </div>
 
 </body>
 </html>
