--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -1,3 +1,7 @@
+html, body { 
+  height:100%; 
+}
+
 .max-width {
   max-width: 100%;
 }
@@ -8,4 +12,28 @@
 
 nav li {
   list-style: none;
+}
+
+.content {
+  position: relative;
+}
+
+.photos {
+  position: absolute;
+  left: 0px;
+  z-index: 1;
+}
+
+.photo {
+  background-size: cover;
+  width: 10em;
+  height: 10em;
+  display: inline-block;
+}
+
+.intro {
+  background-color: rgba(255, 255, 255, .5);
+  position: absolute;
+  left: 0px;
+  z-index: 2;
 }
