--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -19,7 +19,7 @@
     </ul>
   </nav>
 
-  <div class="col-xs-12 col-sm-8 col-md-8">
+  <div class="col-xs-12 col-sm-8 col-md-8" style="height:100%">
     {{{body}}}
   </div>
 
