--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -18,22 +18,24 @@ nav li {
   position: relative;
 }
 
-.photos {
+.photo {
   position: absolute;
   left: 0px;
-  z-index: 1;
-}
-
-.photo {
   background-size: cover;
-  width: 10em;
-  height: 10em;
+  background-image: url("/images/IMG_9875.jpg");
+  width: 100%;
+  height: 100%;
   display: inline-block;
 }
 
 .intro {
-  background-color: rgba(255, 255, 255, .5);
+  background-color: rgba(50, 50, 50, .5);
   position: absolute;
   left: 0px;
   z-index: 2;
+  color: rgb(255, 255, 255);
+}
+
+.intro-text {
+  
 }
