--- a/templates/views/partials/photo.hbs
+++ b/templates/views/partials/photo.hbs
@@ -1,6 +1,5 @@
 {{#if this.link}}
-  <div class="col-xs-12 col-sm-6 col-md-4">
-  {{this.name}}
-  <img src={{this.link}} alt={{@key}} class="max-width">
+  <div class="col-xs-12 col-sm-6 col-md-4 narrow">
+  <img src={{this.link}} alt={{@key}} class="max-width div-fill">
   </div>
 {{/if}}
