--- a/templates/views/partials/photo.hbs
+++ b/templates/views/partials/photo.hbs
@@ -1,5 +1,5 @@
 {{#if this.link}}
   <div class="col-xs-12 col-sm-6 col-md-4 narrow">
-  <img src={{this.link}} alt={{@key}} class="max-width div-fill">
+  <img src={{this.link}} alt={{@key}} class="max-width project-photo">
   </div>
 {{/if}}
