Implement magnific popup gallery for images

--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -5,7 +5,8 @@
     <title>Clicking Together</title>
     <link href="/styles/site.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <script src="https://use.fontawesome.com/c22f2ecb64.js"></script>
+    <link rel="stylesheet" href="/styles/magnific-popup.css">
+
 </head>
 <body>
   <nav class="col-xs-12 col-sm-4 col-md-4" role="navigation">
@@ -22,6 +23,9 @@
   <div class="col-xs-12 col-sm-8 col-md-8" style="height:100%">
     {{{body}}}
   </div>
-
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="/js/jquery.magnific-popup.js"></script>
+  <script src="/js/popup.js"></script>
+  <script src="https://use.fontawesome.com/c22f2ecb64.js"></script>
 </body>
 </html>
