--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>Clicking Together</title>
-    <link href="/styles/site.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <link rel="stylesheet" href="/styles/magnific-popup.css">
-
+  <meta charset="utf-8">
+  <title>Clicking Together</title>
+  <link href="/styles/site.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+  <link rel="stylesheet" href="/styles/magnific-popup.css">
+  <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <nav class="col-xs-12 col-sm-4 col-md-4" role="navigation">
-    <h1><a href="/">Clicking Together</a></h1>
+    <h1><a href="/"><img src="/images/logo_03.gif" class="logo"></a></h1>
     <ul>
-      <li><a href="/about">About</a></li>
-      <li><a href="/camp2013">Camp 2013</a></li>
-      <li><a href="/camp2016">Camp 2016</a></li>
-      <li><a href="/documentary">Documentary</a></li>
-      <li><a href="/resources">Resources</a></li>
+      <li><a href="/about">ABOUT</a></li>
+      <li><a href="/camp2013">CAMP 2013</a></li>
+      <li><a href="/camp2016">CAMP 2016</a></li>
+      <li><a href="/documentary">DOCUMENTARY</a></li>
+      <li><a href="/resources">RESOURCES</a></li>
     </ul>
   </nav>
 
