Add cover photo, style projects preview, style cover

--- a/templates/views/partials/projects_preview.hbs
+++ b/templates/views/partials/projects_preview.hbs
@@ -1,4 +1,5 @@
-<div>
-  <a href="/{{parent.camp}}/{{child.title}}"><h1>{{child.title}}</h1></a>
-  <img src={{child.cover.link}} alt={{child.title}} class="max-width">
+<div class="parent-preview"><a href="/{{parent.camp}}/{{child.title}}">
+  <div class="image-preview-div"><img src={{child.cover.link}} alt={{child.title}} class="max-width image-preview-img"></div>
+  <div class="link-preview"><h1 class="title">{{child.title}}</h1></div>
+  </a>
 </div>
