--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -3,6 +3,11 @@ html, body {
   font-family: 'Source Sans Pro', sans-serif !important;
 }
 
+h1.title {
+  margin: 0px;
+  color: rgb(255,255,255);
+}
+
 .max-width {
   max-width: 100%;
 }
@@ -23,18 +28,28 @@ nav li {
   position: absolute;
   left: 0px;
   background-size: cover;
-  background-image: url("/images/IMG_9875.jpg");
+  background-image: url("/images/cover.png");
   width: 100%;
   height: 100%;
   display: inline-block;
 }
 
 .intro {
-  background-color: rgba(50, 50, 50, .5);
+  width: 100%;
+  background-color: rgba(0, 0, 0, .4);
   position: absolute;
   left: 0px;
   z-index: 2;
   color: rgb(255, 255, 255);
+  flex-direction: column;
+  justify-content: center;
+  display: flex;
+}
+
+.intro-text {
+  padding: 10px 20px 30px 20px; 
+  background-color: rgba(0, 0, 0, .4);
+  text-align: center;
 }
 
 img.project-photo {
@@ -67,5 +82,40 @@ img.project-photo {
 }
 
 .logo {
-  width: 250px;
+  width: 100%;
+}
+
+.parent-preview {
+  position: relative;
+  height: 200px;
+  width: 300px;
+}
+
+.image-preview-div {
+  position: absolute;
+  z-index: 1;
+}
+
+.image-preview-img {
+  object-fit: cover;
+  width: 300px;
+  height: 200px;
+  border-radius: 5px;
+}
+
+.link-preview {
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: absolute;
+  z-index: 2;
+  width: 100%;
+  text-align: center;
+  background-color: rgba(0, 0, 0, .2);
+  border-radius: 5px;
+}
+
+.hover {
+  background-color: rgba(0, 0, 0, .4);
 }
