--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,10 +1,11 @@
-<div class="content" style="height:100%">
+<div class="content" style="height:100%;">
   <div class="photo"></div>
   <div class="intro" style="height:100%">
     <div class="intro-text">
-    <h2>Using photography to help young citizens transcend boundaries of difference and prejudice.</h2>
+    <h2>Clicking Together uses photography to help young citizens transcend boundaries of difference and prejudice.</h2>
     <h3>We aim for our students to see their lives, their cities, and the different communities within their cities from broader perspectives.</h3>
-    <a href="/about"><button class="btn btn-primary" type="submit">Read More</button></a>
+    <a href="/about"><button class="btn btn-warning btn-lg">Read More</button></a>
+    <a href="/documentary"><button class="btn btn-default btn-lg">Preview Our Documentary</button></a>
     </div>
   </div>
 </div>
