--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -9,7 +9,7 @@
   <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
-  <nav class="col-xs-12 col-sm-4 col-md-4" role="navigation">
+  <nav class="col-xs-12 col-sm-2 col-md-2" role="navigation">
     <h1><a href="/"><img src="/images/logo_03.gif" class="logo"></a></h1>
     <ul>
       <li><a href="/about">ABOUT</a></li>
@@ -20,7 +20,7 @@
     </ul>
   </nav>
 
-  <div class="col-xs-12 col-sm-8 col-md-8" style="height:100%">
+  <div class="col-xs-12 col-sm-10 col-md-10" style="height:100%; padding:0px;">
     {{{body}}}
   </div>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
