Fix spacing for projects

--- a/templates/views/partials/projects_preview.hbs
+++ b/templates/views/partials/projects_preview.hbs
@@ -1,4 +1,4 @@
-<div class="parent-preview"><a href="/{{parent.camp}}/{{child.title}}">
+<div class="parent-preview class="col-xs-12 col-sm-6 col-md-6""><a href="/{{parent.camp}}/{{child.title}}">
   <div class="image-preview-div"><img src={{child.cover.link}} alt={{child.title}} class="max-width image-preview-img"></div>
   <div class="link-preview"><h1 class="title">{{child.title}}</h1></div>
   </a>
