add newspaper, fix link color

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -19,7 +19,7 @@
 <section class="press col-xs-12 col-sm-12 col-md-12">
   <h2>Clicking Together in the Press</h2>
   <ul>
-    <li>The Sunday Guardian</li>
+    <li><a href="http://www.sunday-guardian.com/artbeat/clicking-through-the-cliques" target="_blank">The Sunday Guardian</a></li>
     <li>Ambala Kesari</li>
   </ul>
 </section>
