--- a/templates/views/project.hbs
+++ b/templates/views/project.hbs
@@ -2,8 +2,8 @@
 {{#if_equal year 2016}} 
   {{#if student1}}
     <section class="inline-parent">
-      <div class="inline-child"><img src={{student1.photo}} class="student-photo"></div>
-      <div class="inline-child"><h2 class="student-header">{{student1.name}}</h2><p>{{student1.school}}</p><div>
+      <div class="inline-child" style="margin-left: 5px;"><img src={{student1.photo}} class="student-photo"></div>
+      <div class="inline-child" style="margin-left: 5px;"><h2 class="student-header">{{student1.name}}</h2><p>{{student1.school}}</p><div>
     </section>
   {{/if}}
 {{/if_equal}}
