--- a/templates/views/partials/photo.hbs
+++ b/templates/views/partials/photo.hbs
@@ -1,5 +1,3 @@
-{{#if this.link}}
-  <div class="col-xs-12 col-sm-6 col-md-4 narrow">
+  <div class="child-photo col-xs-12 col-sm-12 col-md-12 narrow">
     <a href={{this.link}} title="{{this.caption}}"><img src={{this.link}} alt={{@key}} class="max-width project-photo"></a>
   </div>
-{{/if}}
