--- a/templates/views/project.hbs
+++ b/templates/views/project.hbs
@@ -11,9 +11,7 @@
 <p>{{description}}</p>
 
 <div class="parent-photos">
-{{#each this}}
-  {{#if_indexOf @key 'photo'}}
-    {{> photo}}
-  {{/if_indexOf}}
+{{#each this.matrix}}
+    {{> matrix}}
 {{/each}}
 </div>
