--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -27,5 +27,6 @@
   <script src="/js/jquery.magnific-popup.js"></script>
   <script src="/js/popup.js"></script>
   <script src="https://use.fontawesome.com/c22f2ecb64.js"></script>
+  <script src="https://npmcdn.com/masonry-layout@4.1/dist/masonry.pkgd.min.js"></script>
 </body>
 </html>
