--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -3,9 +3,13 @@ html, body {
   font-family: 'Source Sans Pro', sans-serif !important;
 }
 
-h1.title {
+h2.title {
   margin: 0px;
   color: rgb(255,255,255);
+}
+
+h2.index {
+  padding: 0px 20px 20px 20px;
 }
 
 a {
