--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -2,8 +2,7 @@
   <div class="photo"></div>
   <div class="intro" style="height:100%">
     <div class="intro-text">
-    <h2>Clicking Together uses photography to help young citizens transcend boundaries of difference and prejudice.</h2>
-    <h3>We aim for our students to see their lives, their cities, and the different communities within their cities from broader perspectives.</h3>
+    <h2 class="index">Clicking Together uses photography to help young citizens transcend boundaries of difference and prejudice.</h2>
     <a href="/about"><button class="btn btn-warning btn-lg">Read More</button></a>
     <a href="/documentary"><button class="btn btn-default btn-lg">Preview Our Documentary</button></a>
     </div>
