--- a/templates/views/camp2013.hbs
+++ b/templates/views/camp2013.hbs
@@ -1,4 +1,4 @@
-<section class="mission col-xs-12 col-sm-12 col-md-12">
+<section class="mission col-xs-12 col-sm-3 col-md-3">
   <h1>Camp 2013</h1>
   <p>Clicking Together was conceptualized in 2013 by Hannah Yang, Shiv Tandan, and Charmaine Poh to begin the journey of broadening the perspectives of youth in Ambala, India. Supported by the Davis Projects for Peace Foundation, the project brought together 22 different youths from eight different schools in the city. These youth were selected through a vigorous application process, and varied greatly in background, but they had two things in common: they showed themselves to be bright and creative, and they displayed an interest in photography. </p>
 
@@ -7,6 +7,9 @@
   <p> Each student was paired with a buddy, whom they shared a camera with. They visited each other’s neighborhoods and were challenged to tell their buddies’ stories in five photos. They went on an overnight retreat in the Kasauli hills with students from outside Ambala. The photographs exhibited culminated in four key themes: the Kasauli retreat, Ambala’s market Sadar Bazaar, Beauty in their lives, and Someone they love.</p>
 </section>
 
+<section class="col-xs-12 col-sm-9 col-md-9">
+
 {{#each projects}}
   {{> projects_preview child=this parent=..}}
 {{/each}}
+</section>
