--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -9,18 +9,22 @@
   <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
-  <nav class="col-xs-12 col-sm-2 col-md-2" role="navigation">
-    <h1><a href="/"><img src="/images/logo_03.gif" class="logo"></a></h1>
-    <ul>
-      <li><a href="/about">ABOUT</a></li>
-      <li><a href="/camp2013">CAMP 2013</a></li>
-      <li><a href="/camp2016">CAMP 2016</a></li>
-      <li><a href="/documentary">DOCUMENTARY</a></li>
-      <li><a href="/resources">RESOURCES</a></li>
-    </ul>
+  <nav class="col-xs-12 col-sm-12 col-md-12" role="navigation">
+    <div class="col-xs-12 col-sm-2 col-md-3">
+      <a href="/"><img src="/images/logo_03.gif" class="logo"></a>
+    </div>
+    <div class="col-xs-12 col-sm-9 col-md-9">
+      <ul>
+        <li><a href="/about">ABOUT</a></li>
+        <li><a href="/camp2013">CAMP 2013</a></li>
+        <li><a href="/camp2016">CAMP 2016</a></li>
+        <li><a href="/documentary">DOCUMENTARY</a></li>
+        <li><a href="/resources">RESOURCES</a></li>
+      </ul>
+    </div>
   </nav>
 
-  <div class="col-xs-12 col-sm-10 col-md-10" style="height:100%; padding:0px;">
+  <div class="col-xs-12 col-sm-12 col-md-12" style="height:100%; padding:0px;">
     {{{body}}}
   </div>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
