--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -9,7 +9,7 @@
   <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
-  <nav class="col-xs-12 col-sm-12 col-md-12" role="navigation">
+  <nav class="header col-xs-12 col-sm-12 col-md-12" role="navigation">
     <div class="col-xs-12 col-sm-2 col-md-3">
       <a href="/"><img src="/images/logo_03.gif" class="logo"></a>
     </div>
