--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -166,3 +166,9 @@ nav li {
 .hover {
   background-color: rgba(0, 0, 0, .4);
 }
+
+.team-photo {
+  width:100%;
+  height: 200px;
+  object-fit: cover;
+}
