--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -1,7 +1,5 @@
-<h1>About</h1>
-
 <section class="mission col-xs-12 col-sm-3 col-md-3">
-<h2>Our Mission</h2>
+<h1>About Us</h1>
   <p>We live in a world where communities hold prejudices against one another, shaped by the labels of class, caste, religion, gender, and ethnicity. These prejudices often lead to a lack of understanding, and ultimately, disunity. Is there a way to bridge these divides? What if we were able to create a safe space of understanding at a young age - would that change the way each citizen views the world?</p>
 
   <p>Clicking Together uses photography to help young citizens transcend boundaries of difference and prejudice.</p>
@@ -10,53 +8,59 @@
 </section>
 
 <section class="team col-xs-12 col-sm-9 col-md-9">
-  <h2>Our Team</h2>
-  {{#each team}} 
-    {{> bio }}
-  {{/each}}
+  <section class="team col-xs-12 col-sm-12 col-md-12">
+    <h2>Our Team</h2>
+    {{#each team}} 
+      {{> bio }}
+    {{/each}}
+  </section>
+
+  <section class="team col-xs-12 col-sm-12 col-md-12">
+
+    <section class="col-xs-12 col-sm-4 col-md-4">
+      <h2>Clicking Together in the Press</h2>
+      <ul>
+        <li><a href="http://www.sunday-guardian.com/artbeat/clicking-through-the-cliques" target="_blank">The Sunday Guardian</a></li>
+        <li>Ambala Kesari</li>
+      </ul>
+    </section>
+
+    <section class="col-xs-12 col-sm-4 col-md-4">
+      <h2>Partners and Sponsors</h2>
+        <h3>Program Funders</h3>
+        <ul>
+          <li>Davis Projects for Peace</li>
+          <li>GetIT Comms</li>
+        </ul>
+
+        <h3>Website</h3>
+        <ul>
+          <li>Melanie Gin</li>
+        </ul> 
+    </section>
+
+    <section class="col-xs-12 col-sm-4 col-md-4">
+      <h3>Program Supporters</h3>
+      <ul>
+        <li>Rotary Club of Ambala</li>
+        <li>Phoenix Club of Ambala</li>
+        <li>SD College Ambala</li>
+        <li>The Tandan Family</li>
+        <li>Dr. Desh Bandhu</li>
+      </ul>
+    </section>
+
+    <section class="col-xs-12 col-sm-4 col-md-4">
+      <h3>Camera Sponsorships and Donations</h3>
+      <ul>
+        <li>Future Forward</li>
+        <li>Holman Gao</li>
+        <li>Matthias Ho</li>
+      </ul>
+    </section>
+  </section>
+
 </section>
 
-<section class="press col-xs-12 col-sm-9 col-md-9">
-  <h2>Clicking Together in the Press</h2>
-  <ul>
-    <li><a href="http://www.sunday-guardian.com/artbeat/clicking-through-the-cliques" target="_blank">The Sunday Guardian</a></li>
-    <li>Ambala Kesari</li>
-  </ul>
-</section>
 
-<section class="press col-xs-9 col-sm-9 col-md-9">
-  <h2>Partners and Sponsors</h2>
 
-  <div class="col-xs-12 col-sm-4 col-md-4">
-    <h3>Program Funders</h3>
-    <ul>
-      <li>Davis Projects for Peace</li>
-      <li>GetIT Comms</li>
-    </ul>
-
-    <h3>Website</h3>
-    <ul>
-      <li>Melanie Gin</li>
-    </ul> 
-  </div>
-
-  <div class="col-xs-12 col-sm-9 col-md-9">
-    <h3>Program Supporters</h3>
-    <ul>
-      <li>Rotary Club of Ambala</li>
-      <li>Phoenix Club of Ambala</li>
-      <li>SD College Ambala</li>
-      <li>The Tandan Family</li>
-      <li>Dr. Desh Bandhu</li>
-    </ul>
-  </div>
-
-  <div class="col-xs-12 col-sm-9 col-md-9">
-    <h3>Camera Sponsorships and Donations</h3>
-    <ul>
-      <li>Future Forward</li>
-      <li>Holman Gao</li>
-      <li>Matthias Ho</li>
-    </ul>
-  </div>
-</section>
