--- a/templates/views/documentary.hbs
+++ b/templates/views/documentary.hbs
@@ -1,3 +1,11 @@
-<h1>Documentary</h1>
-<h2>Community-centric photography camps in Ambala, India</h2>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/6KQEvKmXZsE" frameborder="0" allowfullscreen></iframe>
+<section class="mission col-xs-12 col-sm-3 col-md-3">
+  <h1>Our Documentary</h1>
+  <h2>Community-centric photography camps in Ambala, India</h2>
+  <p>Clicking Together is fully funded by the Davis Projects for Peace Foundation. Clicking Together uses photography to help middle school children in Ambala, India become more conscious about their social, economic and cultural surroundings and life. The focus is on responsibility, awareness and understanding. 
+  Film and editing credit all go to Charmaine Poh.
+  </p>
+</section>
+
+<section class="col-xs-12 col-sm-9 col-md-9">
+<iframe width="840" height="472.5" src="https://www.youtube.com/embed/6KQEvKmXZsE" frameborder="0" allowfullscreen></iframe>
+</section>
