--- a/templates/views/resources.hbs
+++ b/templates/views/resources.hbs
@@ -1,1 +1,8 @@
-<h1>Resources - Coming Soon!</h1>
+<section class="mission col-xs-12 col-sm-3 col-md-3">
+  <h1>Resources</h1>
+</section>
+
+<section class="col-xs-12 col-sm-9 col-md-9">
+  <h2>Thanks for visiting Clicking Together's website. Interested in getting in contact?</h2>
+  <p>Email us at info at clickingtogether dot com</p>
+</section>
