--- a/templates/views/resources.hbs
+++ b/templates/views/resources.hbs
@@ -4,5 +4,5 @@
 
 <section class="col-xs-12 col-sm-9 col-md-9">
   <h2>Thanks for visiting Clicking Together's website. Interested in getting in contact?</h2>
-  <p>Email us at info at clickingtogether dot com</p>
+  <p>Email us at clickingtogetherphotocamp at gmail dot com</p>
 </section>
