--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -26,7 +26,7 @@
     </div>
   </nav>
 
-  <div class="col-xs-12 col-sm-12 col-md-12" style="height:100%; padding:0px;">
+  <div class="container col-xs-12 col-sm-12 col-md-12" style="height:100%; padding:0px;">
     {{{body}}}
   </div>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
