--- a/templates/views/documentary.hbs
+++ b/templates/views/documentary.hbs
@@ -1,8 +1,6 @@
 <section class="mission col-xs-12 col-sm-3 col-md-3">
   <h1>Our Documentary</h1>
-  <h2>Community-centric photography camps in Ambala, India</h2>
-  <p>Clicking Together is fully funded by the Davis Projects for Peace Foundation. Clicking Together uses photography to help middle school children in Ambala, India become more conscious about their social, economic and cultural surroundings and life. The focus is on responsibility, awareness and understanding. 
-  Film and editing credit all go to Charmaine Poh.
+  <h2>In 2013, we sought to begin the work of building community among youth from a wide range of backgrounds. Our second camp, in 2016, chronicles the journey that these youth have undertaken in discovering who they are and what kind of the world they saw themselves living in. Here is their story. 
   </p>
 </section>
 
