--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -1,15 +1,15 @@
 <section class="mission col-xs-12 col-sm-3 col-md-3">
-<h1>About Us</h1>
-  <p>We live in a world where communities hold prejudices against one another, shaped by the labels of class, caste, religion, gender, and ethnicity. These prejudices often lead to a lack of understanding, and ultimately, disunity. Is there a way to bridge these divides? What if we were able to create a safe space of understanding at a young age - would that change the way each citizen views the world?</p>
+<h3>About Us</h3>
+  <p align="justify">We live in a world where communities hold prejudices against one another, shaped by the labels of class, caste, religion, gender, and ethnicity. These prejudices often lead to a lack of understanding, and ultimately, disunity. Is there a way to bridge these divides? What if we were able to create a safe space of understanding at a young age - would that change the way each citizen views the world?</p>
 
-  <p>Clicking Together uses photography to help young citizens transcend boundaries of difference and prejudice.</p>
+  <p align="justify">Clicking Together uses photography to help young citizens transcend boundaries of difference and prejudice.</p>
 
-  <p>We accomplish this through photography camps for youths. We aim for our students to see their lives, their cities, and the different communities within their cities from broader perspectives.</p>
+  <p align="justify">We accomplish this through photography camps for youths. We aim for our students to see their lives, their cities, and the different communities within their cities from broader perspectives.</p>
 </section>
 
 <section class="team col-xs-12 col-sm-9 col-md-9">
   <section class="team col-xs-12 col-sm-12 col-md-12">
-    <h2>Our Team</h2>
+    <h3>Our Team</h3>
     {{#each team}} 
       {{> bio }}
     {{/each}}
@@ -17,20 +17,20 @@
 
   <section class="team col-xs-12 col-sm-12 col-md-12">
 
-    <h2>Clicking Together in the Press</h2>
+    <h3>Press</h3>
     <ul>
       <li><a href="http://www.sunday-guardian.com/artbeat/clicking-through-the-cliques" target="_blank">The Sunday Guardian</a></li>
       <li>Ambala Kesari</li>
     </ul>
 
-    <h2>Partners and Sponsors</h2>
-      <h3>Program Funders</h3>
+  
+    <h3>Program Funders</h3>
       <ul>
         <li>Davis Projects for Peace</li>
         <li>GetIT Comms</li>
       </ul>
 
-      <h3>Website</h3>
+    <h3>Website</h3>
       <ul>
         <li>Melanie Gin</li>
       </ul> 
