--- a/templates/views/camp2016.hbs
+++ b/templates/views/camp2016.hbs
@@ -1,6 +1,6 @@
 <section class="mission col-xs-12 col-sm-3 col-md-3">
-  <h1>Camp 2016</h1>
-  <p>In 2016, the Clicking Together returned to Ambala to work with the same group of youth, tracking the ways they’ve grown as young people. This time, each of them worked on an individual photography project, which was exhibited in the community. Here is the proud result of the passion and empathy that these students put into telling stories about their world. 
+  <h3>Camp 2016</h3>
+  <p align="justify">In 2016, the Clicking Together returned to Ambala to work with the same group of youth, tracking the ways they’ve grown as young people. This time, each of them worked on an individual photography project, which was exhibited in the community. Here is the proud result of the passion and empathy that these students put into telling stories about their world. 
   </p>
 </section>
 
