--- a/templates/views/documentary.hbs
+++ b/templates/views/documentary.hbs
@@ -1,8 +1,7 @@
 <section class="mission col-xs-12 col-sm-3 col-md-3">
-  <h1>Our Documentary</h1>
-  <h2>Community-centric photography camps in Ambala, India</h2>
-  <p>In 2013, we sought to begin the work of building community among youth from a wide range of backgrounds. Our second camp, in 2016, chronicles the journey that these youth have undertaken in discovering who they are and what kind of the world they saw themselves living in. Here is their story. 
-  </p>
+  <h3 align="left">Our Documentary</h3>
+  <p align="justify">In 2013, we sought to begin the work of building community among youth from a wide range of backgrounds. Our second camp, in 2016, chronicles the journey that these youth have undertaken in discovering who they are and what kind of the world they saw themselves living in. Here is their story.</p>
+  <p><i>Full documentary coming soon.</p>
 </section>
 
 <section class="col-xs-12 col-sm-9 col-md-9">
