--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -6,21 +6,21 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <link href="/styles/site.css" rel="stylesheet">
   <link rel="stylesheet" href="/styles/magnific-popup.css">
-  <link href='https://fonts.googleapis.com/css?family=Covered+By+Your+Grace|Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Amatic+SC:700|Hindi' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <nav class="header col-xs-12 col-sm-12 col-md-12" role="navigation">
     <div class="header-parent row">
       <div class="header-link col-xs-12 col-sm-3 col-md-3">
-        <a href="/"><h1 class="logo">CLICKING TOGETHER</h1></a>
+        <a href="/"><h1 class="logo">Clicking Together</h1></a>
       </div>
       <div class="header-menu col-xs-12 col-sm-9 col-md-9">
         <ul>
-          <li><a href="/about">ABOUT</a></li>
-          <li><a href="/camp2013">CAMP 2013</a></li>
-          <li><a href="/camp2016">CAMP 2016</a></li>
-          <li><a href="/documentary">DOCUMENTARY</a></li>
-          <li><a href="/resources">RESOURCES</a></li>
+          <li><a href="/about">About</a></li>
+          <li><a href="/camp2013">Camp 2013</a></li>
+          <li><a href="/camp2016">Camp 2016</a></li>
+          <li><a href="/documentary">Documentary</a></li>
+          <li><a href="/resources">Resources</a></li>
         </ul>
       </div>
     </div>
