--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -111,9 +111,9 @@ nav li {
 }
 
 .student-photo {
-  width: 150px;
-  height: 150px;
-  object-fit: fill;
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
 }
 
 .student-header {
