resource page photo

--- a/templates/views/resources.hbs
+++ b/templates/views/resources.hbs
@@ -1,9 +1,10 @@
 <section class="mission col-xs-12 col-sm-3 col-md-3">
   <h3>Resources</h3>
+  <p align="justify">We believe that photography is a great tool to build community around the world. As such, our aim is for photographers and educators to be able to access our lesson plans, and start similar initiatives in their own communities. To contact us, feel free to <a href="mailto:clickingtogetherphotocamp@gmail.com" target="_top">email us</a>.</p>
+  <p><i>Full lesson plans coming soon.</i></p>
 </section>
 
 <section class="col-xs-12 col-sm-9 col-md-9">
   <h3>Thank you for visiting us!</h3>
-  <p>We believe that photography is a great tool to build community around the world. As such, our aim is for photographers and educators to be able to access our lesson plans, and start similar initiatives in their own communities. To contact us, feel free to <a href="mailto:clickingtogetherphotocamp@gmail.com" target="_top">email us</a>.</p>
-  <p><i>Full lesson plans coming soon.</p>
+  <img src="/images/group_with_filmmakers.jpg" style="width:700px;">
 </section>
