--- a/templates/views/resources.hbs
+++ b/templates/views/resources.hbs
@@ -6,5 +6,5 @@
 
 <section class="col-xs-12 col-sm-9 col-md-9">
   <h3>Thank you for visiting us!</h3>
-  <img src="/images/group_with_filmmakers.jpg" style="width:700px;">
+  <img src="http://i.imgur.com/qPVem6I.jpg" style="width:700px;">
 </section>
