paragraph font change

--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -1,6 +1,6 @@
 html, body {
   height:100%; 
-  font-family: 'Hind', sans-serif !important;
+  font-family: 'Roboto Condensed', sans-serif !important;
 }
 
 h3.title {
