--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <link href="/styles/site.css" rel="stylesheet">
   <link rel="stylesheet" href="/styles/magnific-popup.css">
-  <link href='https://fonts.googleapis.com/css?family=Amatic+SC:700|Hindi' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Amatic+SC:700|Roboto+Condensed:300' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <nav class="header col-xs-12 col-sm-12 col-md-12" role="navigation">
