doc film dynamically adjusts

--- a/templates/views/documentary.hbs
+++ b/templates/views/documentary.hbs
@@ -1,9 +1,11 @@
 <section class="mission col-xs-12 col-sm-3 col-md-3">
-  <h3 align="left">Our Documentary</h3>
+  <h3>Our Documentary</h3>
   <p align="justify">In 2013, we sought to begin the work of building community among youth from a wide range of backgrounds. Our second camp, in 2016, chronicles the journey that these youth have undertaken in discovering who they are and what kind of the world they saw themselves living in. Here is their story.</p>
   <p><i>Full documentary coming soon.</p>
 </section>
 
 <section class="col-xs-12 col-sm-9 col-md-9">
-<iframe width="840" height="472.5" src="https://www.youtube.com/embed/6KQEvKmXZsE" frameborder="0" allowfullscreen></iframe>
+<div class="documentary-container">
+  <iframe class="documentary-iframe" src="https://www.youtube.com/embed/R1VNihOz4T0?rel=0"frameborder="0" allowfullscreen></iframe>
+</div>
 </section>
