--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -179,3 +179,15 @@ nav li {
   height: 200px;
   object-fit: cover;
 }
+
+.documentary-container {
+  padding-bottom: 56.25%;
+  position: relative;
+}
+.documentary-iframe {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
