resources images replaced with imgur link

--- a/templates/views/resources.hbs
+++ b/templates/views/resources.hbs
@@ -6,5 +6,5 @@
 
 <section class="col-xs-12 col-sm-9 col-md-9">
   <h3>Thank you for visiting us!</h3>
-  <img class="resources-photo-resize" src="/images/group_with_filmmakers.jpg" alt=""/>
+  <img class="resources-photo-resize" src="http://i.imgur.com/X7s3Clq.jpg" alt=""/>
 </section>
