--- a/templates/views/project.hbs
+++ b/templates/views/project.hbs
@@ -4,7 +4,7 @@
 {{#if_equal year 2016}} 
   {{#if student1}}
     <section class="inline-parent">
-      <div class="inline-child"><img src={{student1.photo}} class="student-photo"></div>
+      <div class="inline-child"><img src={{student1.photo}} class="resources-photo-resize"></div>
       <div class="inline-child"><h4 class="student-header">{{student1.name}}</h4><p>{{student1.school}}</p><div>
     </section>
   {{/if}}
