doc page text edit

--- a/templates/views/documentary.hbs
+++ b/templates/views/documentary.hbs
@@ -1,6 +1,12 @@
 <section class="mission col-xs-12 col-sm-3 col-md-3">
   <h3>Our Documentary</h3>
-  <p align="justify">In 2013, we sought to begin the work of building community among youth from a wide range of backgrounds. Our second camp, in 2016, chronicles the journey that these youth have undertaken in discovering who they are and what kind of the world they saw themselves living in. Here is their story.</p>
+  <p align="justify">In 2013, we sought to begin the work of building community among youth from a wide range of backgrounds.</p>
+
+  <p><i>Here’s the story of our work in 2013.</i></p>
+  
+  <br>
+  <p align="justify">In 2016, we had the opportunity to return to work with the same group of youth. We documented their journey again 3 years later and made a documentary film that chronicles the journey that these youth have undertaken in discovering who they are and what kind of the world they saw themselves living in.</p>
+
   <p><i>Full documentary coming soon.</p>
 </section>
 
