doc button change

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -4,7 +4,7 @@
     <div class="intro-text">
     <h2 class="index">Clicking Together uses photography to help young citizens transcend boundaries of difference and prejudice.</h2>
     <a href="/about"><button class="btn btn-warning btn-lg" style="margin-right: 10px">Read More</button></a>
-    <a href="/documentary"><button class="btn btn-default btn-lg">Preview Our Documentary</button></a>
+    <a href="/documentary"><button class="btn btn-default btn-lg">Watch Our Documentary</button></a>
     </div>
   </div>
 </div>
