--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -16,6 +16,7 @@
       </div>
       <div class="header-menu col-xs-12 col-sm-9 col-md-9">
         <ul>
+          <li><a href="/apply">APPLY</a></li>
           <li><a href="/about">ABOUT</a></li>
           <li><a href="/camp2013">CAMP 2013</a></li>
           <li><a href="/camp2016">CAMP 2016</a></li>
